# Functions

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  Makefile  README.md  TODO.md  build.sh  clean.sh  test.sh
docs/: INSTALL.md  SYNTAX.md  TODO.md
include/: ArgsParser.hpp  Colors.hpp  Compiler.hpp  Lexer.hpp  Parser.hpp  Variable.h
src/: ArgsParser.cpp  Compiler.cpp  Lexer.cpp  Parser.cpp  concept.c  main.cpp
tests/: Test.cpp  add_test.func  basic_test.func  bool_test.func  init_test.func  main_1  main_2  main_2.func  main_3  main_3.func  main_4.func  mul_test.func  out_test.func  set_test.func  sub_test.func  test.cpp
