CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Functions)

EXECUTE_PROCESS(COMMAND )
SET(CMAKE_CXX_FLAGS "-Wall -std=c++17 --pedantic-errors")

SET(CMAKE_C_COMPILER /usr/local/bin/gcc-8)
SET(CMAKE_CXX_COMPILER /usr/local/bin/g++-8)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")

FILE(GLOB function_SRC
        "src/*.cpp"
        )

ADD_EXECUTABLE(func ${function_SRC})